Pre Version 1.2 FFMPEG streaming.